# MSB

./: .editorconfig  .env.example  .gitattributes  .gitignore  ACTIVATION_GUIDE.md  ADVANCED_MATHEMATICAL_STRATEGIES.md  AMM_PREDICTIVE_MATHEMATICS.md  AUDIT.md  AUDIT_EXECUTIVE_SUMMARY.md  Architecture.md  Architecture.yaml  BULLETPROOF_FIXES.md  CAPITAL_250K_500K_STRATEGY.md  CLEANUP_SUMMARY.md  CODEOWNERS  COMPLETE_SYSTEM_AUDIT.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CONTRIBUTING.md  CO_ARCHITECT_SETUP.md  Cargo.toml  DEPENDENCY_AUDIT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_PIPELINE.md  DEPLOYMENT_RESULTS.md  DIAMOND_FACET_ARCHITECTURE.md  DIRECTORY_ORGANIZATION.md  Dockerfile  ELITE_QUANT_FRAMEWORK.md  ENHANCED_SYSTEM_SUMMARY.md  ENTERPRISE_LICENSING.md  ENTERPRISE_SUMMARY.md  FACEBOOK_HACK_FORENSIC_REPORT.md  FEASIBILITY_PROOF.md  FINAL_ARCHITECTURE.md  FINAL_RESULTS_SUMMARY.md  FINAL_SYSTEM_OVERVIEW.md  FIX_IMPLEMENTATION_PLAN.md  FLAWLESS_AUDIT_REPORT.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_GAP_ANALYSIS.md  (+42 more)
.github/workflows/: ci.yml
.wake/extension/: local-local-chain-72760471-cfde-473a-905f-ff9e919a42a3.json
audit_20250911_115003/: audit_report.md
cmd/internal/: README.md
config/: capital_250k_500k.yaml  config.yaml  elite_800k_config.yaml  hummingbot_array_config.yaml  win_rate_requirements.toml
contracts/: MacroStrikeArbitrage.sol  MacroStrikeDiamond.sol  MasterDiamond.sol
contracts/child_diamonds/: AMMDiamond.sol  LongStrikeDiamond.sol  ShortStrikeDiamond.sol
contracts/facets/: AMMBotFacet.sol  AMMFacet.sol  LongStrikeFacet.sol  ShortStrikeFacet.sol  StrikeBotFacet.sol
contracts/interfaces/: IAMMBot.sol  IAMMFacet.sol  IChildDiamond.sol  IDiamondCut.sol  IDiamondLoupe.sol  IERC173.sol  ILongStrikeFacet.sol  IMasterDiamond.sol  IShortStrikeFacet.sol  (+1 more)
data/: README.md  sim_per_trade.csv  sim_summary_by_symbol.csv
docs/: 90_PERCENT_WIN_RATE.md  ACCURACY_AUDIT.md  DEVELOPERS.md  EIP_INTEGRATION_GUIDE.md  ONBOARDING.md  OPPORTUNITY_DISCOVERY.md  REVIEWERS.md  STRATEGY_REFINEMENT.md  UNIVERSAL_OPPORTUNITIES.md
ops/: README.md
reports/: sim_report.html  sim_report.txt
scripts/: build_and_run.sh  deep_code_audit.sh  final_verification.sh  flush_system_test.sh  full_audit.sh  health_check.sh  parse_sim_log.sh  parse_to_csv.py  precision_audit.sh  pressure_test.sh  production_audit_250k.rs  setup_julia.sh  system_flush.sh  validate_julia.sh
src/: advanced_cascade_theory.rs  amm_predictive_arbitrage.rs  cascade_prediction_proof.rs  consensus_layer_integration.rs  critical_fixes.rs  cross_chain_atomic_proof.rs  diamond_integration.rs  elite_800k_optimizer.rs  elite_quant_framework.rs  elite_strategies.rs  enhanced_strike_validator.rs  errors.rs  historical_backtest.rs  hummingbot_array_system.rs  lib.rs  live_simulation.rs  main.rs  opportunity_scanner.rs  opportunity_scanner_advanced.rs  production_monitor.rs  production_test_suite.rs  proprietary_backtest.rs  proprietary_predictive_engine.rs  quant_strike_system.rs  quantum_strategies.rs  revolutionary_strategies.rs  rough_volatility_calibration_proof.rs  rug_pull_detector.rs  stochastic_volatility_models.rs  strike_optimizer.rs  strike_optimizer_clean.rs  strike_validator.rs  superior_strike_validator.rs  trade_test_harness.rs  trading_engine.rs  ultra_fast_cascade.rs  universal_executor.rs  volume_oscillator_fixed.rs
strike_box/: Cargo.toml  README.md
strike_box/src/: lib.rs
tests/: README.md  elite_quant_integration.rs
(+21 files in other folders)
