[package]
name = "macro_strike_bot_fixed"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
serde_urlencoded = "0.7"
async-trait = "0.1"
chrono = "0.4"

# Optional EIP integration dependencies
ethers = { version = "2.0", features = ["ws", "rustls"], optional = true }
ethers-contract = { version = "2.0", optional = true }

[features]
default = []
eip = ["ethers", "ethers-contract"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
