[package]
name = "macro_strike_bot_fixed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading_engine"
path = "src/bin/trading_engine.rs"

[[bin]]
name = "trading_engine_simple"
path = "src/bin/trading_engine_simple.rs"

[[bin]]
name = "run_1500_trades"
path = "src/bin/run_1500_trades.rs"

[[bin]]
name = "backtest_5_years"
path = "src/bin/backtest_5_years.rs"

[[bin]]
name = "live_test_hummingbot"
path = "src/bin/live_test_hummingbot.rs"

[lib]
name = "macro_strike_bot_fixed"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
serde_urlencoded = "0.7"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
nalgebra = "0.32"
num-complex = "0.4"
special = "0.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
statistical = "1.0"
strike_box = { path = "strike_box" }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"

# Optional EIP integration dependencies
ethers = { version = "2.0", features = ["ws", "rustls"], optional = true }
ethers-contract = { version = "2.0", optional = true }

[features]
default = []
eip = ["ethers", "ethers-contract"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
